# project_api_axum

./: Cargo.toml  Readme.md  manual_sql_axum.sql  test1.hurl  test2.hurl  test2_insert.sql  test3.hurl
src/: main.rs  main2.rs  main3.rs  models.rs
src/handlers/: mod.rs
src/persistance/: mod.rs
