[package]
name = "project_api_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15.7"
axum = "0.8.4"
log = "0.4.27"
pretty_env_logger = "0.5.0"
async-trait = "0.1.88"
thiserror = "2.0.12"