[package]
name = "project_api_poem"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15.7"
poem = { version = "3.1.12", features = ["server"] }
poem-openapi = "5.1.16"
log = "0.4.27"
pretty_env_logger = "0.5.0"
async-trait = "0.1.89"
thiserror = "2.0.16"
